# icewatch

./: .pre-commit-config.yaml  README.md  geocode_facilities.py  ice_detention_scraper.py  pyproject.toml  render_facilities_map.py  requirements.txt
.github/workflows/: ci.yaml  update-data.yml
data/: FY25_detentionStats08292025.xlsx  facilities_geocoded_20250704.json  facilities_geocoded_20250707.json  facilities_geocoded_20250708_174739.json  facilities_geocoded_20250712.json  facilities_geocoded_20250717_110750.json  facilities_geocoded_20250718.json  facilities_geocoded_20250719.json  facilities_geocoded_20250728.json  facilities_geocoded_20250801.json  facilities_geocoded_20250802.json  facilities_geocoded_20250803.json  facilities_geocoded_20250813.json  facilities_geocoded_20250815.json  facilities_geocoded_20250912_182152.json  facilities_geocoded_20250912_182537.json  geocode_cache.json  ice_facilities_20250704_162107.json  ice_facilities_20250707_220250.json  ice_facilities_20250712_193443.json  ice_facilities_20250713_113723.json  ice_facilities_20250717_110734.json  ice_facilities_20250718_120835.json  ice_facilities_20250724_120834.json  ice_facilities_20250801_120849.json  ice_facilities_20250802_120748.json  ice_facilities_20250803_001646.json  ice_facilities_20250815_120153.json  ice_facilities_20250912_182141.json
docs/: CNAME  index.html  info.html
docs/css/: styles.css
src/icewatch/: __init__.py  geocode_facilities.py  ice_detention_scraper.py  render_facilities_map.py
src/icewatch/geocode/: __init__.py  mapbox.py  nomination.py  types.py
src/icewatch/templates/: map.html
tests/: test_render_facilities_map.py
