[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project]
name = "icewatch"
version = "0.1.0"
description = "A Python-based dashboard for ICE detention statistics"
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  "jinja2>=3.1.6",
]

[project.urls]
homepage = "https://watchice.org/"
source = "https://github.com/lockdown-systems/icewatch"
issues = "https://github.com/lockdown-systems/icewatch/issues"
funding = "https://opencollective.com/lockdown-systems"

[project.scripts]
icewatch = "icewatch:main"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pandas-stubs>=2.3.0.250703",
    "pre-commit>=4.2.0",
    "pytest>=8.4.2",
    "ruff>=0.12.3",
    "types-requests>=2.32.4.20250611",
]
